--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -40,13 +40,13 @@ ru:
       updated: "Ваша учётная запись изменена."
       update_needs_confirmation: "Ваш аккаунт успешно обновлен, нонеобходимо подтвердить ваш новый адрес email. Пожалуйста, проверьте свою электронную почту и нажмите на ссылку \"Подтвердить\", чтобы завершить обновления email."
     sessions:
+      link: 'Войти'
       signed_in: "Вход в систему выполнен."
       signed_out: "Выход из системы выполнен."
     unlocks:
       send_instructions: "В течение нескольких минут вы получите письмо с инструкциями по разблокировке вашей учётной записи."
       send_paranoid_instructions: "Если ваша учётная запись существует, то в течение нескольких минут вы получите письмо с инструкциями по её разблокировке."
       unlocked: "Ваша учётная запись разблокирована. Теперь вы вошли в систему."
-
   errors:
     messages:
       already_confirmed: "уже подтверждена. Пожалуйста, попробуйте войти в систему"
