--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -2,8 +2,13 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 ru:
+#  common:
   created: "создан"
   deleted: "удаленные"
+  yes: 'Да'
+  no: 'Нет'
+  true: 'Да'
+  false: 'Нет'
 
   views:
     pagination:
@@ -12,3 +17,10 @@ ru:
       truncate: "..."
       first: "первая"
       last: "последняя"
+
+  helpers:
+    submit:
+      comment:
+        create: 'Добавить комментарий'
+      user:
+        update: 'Сохранить изменения'
