--- a/config/locales/ru.simple_form.yml
+++ b/config/locales/ru.simple_form.yml
@@ -89,6 +89,14 @@ ru:
         password_confirmation: 'Подтвердите пароль'
         first_name: 'Имя'
         last_name: 'Фамилия'
+      page:
+        name: 'Название'
+        nickname: 'Служебное имя'
+      content:
+        name: 'Название'
+        announce: 'Заголовок'
+        body: 'Текст'
+
     hints:
       category:
         pediatric: ''
