--- a/config/locales/ru.simple_form.yml
+++ b/config/locales/ru.simple_form.yml
@@ -49,7 +49,7 @@ ru:
         starting_work: "Дата создания"
         awards: "Награды, дипломы"
         visit_home: "Выезд на дом"
-        price: "Цена"
+        price: "Стоимость приема"
         specialty: "Специализация"
         pediatric: "Детская"
       clinic_category_relations:
@@ -81,7 +81,7 @@ ru:
         high_school_name: "ВУЗ"
         awards: "Награды, дипломы"
         visit_home: "Выезд на дом"
-        price: "Цена"
+        price: "Стоимость приема"
         specialty: "Специализация"
         created_at: "Создан"
         updated_at: "Изменен"
