--- a/config/locales/ru.simple_form.yml
+++ b/config/locales/ru.simple_form.yml
@@ -88,6 +88,8 @@ ru:
         gender: "Пол"
         pediatric: "Детский"
         employer: "Место работы"
+      doctor_category_relations:
+        category_id: 'Категория'
       user:
         password: 'Пароль'
         remember_me: 'Запомнить меня'
