Advise decription changed to text, fixed for charts (end of day)

--- a/config/locales/activerecord.yml
+++ b/config/locales/activerecord.yml
@@ -139,6 +139,7 @@ ru:
       doctor:
         first_name: "Имя"
         last_name: "Фамилия"
+        full_name: "ФИО"
         description: "Описание"
         status: "Статус"
         user_id: "Менеджер"
