--- a/config/locales/ru.simple_form.yml
+++ b/config/locales/ru.simple_form.yml
@@ -65,6 +65,7 @@ ru:
       doctor:
         first_name: "Имя"
         last_name: "Фамилия"
+        full_name: "ФИО"
         city: "Город"
         address: "Адрес"
         description: "Описание"
