--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -2,13 +2,12 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 ru:
-#  common:
   created: "создан"
   deleted: "удаленные"
   yes: 'Да'
   no: 'Нет'
-  true: 'Да'
-  false: 'Нет'
+  'true': 'Да'
+  'false': 'Нет'
 
   unauthorized:
       manage:
