добавлена возможность писать комментарии из админки

--- a/config/locales/activerecord.yml
+++ b/config/locales/activerecord.yml
@@ -137,6 +137,10 @@ ru:
         created_at: "Создан"
         updated_at: "Изменен"
         published: "Опубликован"
+        name: 'Имя комментатора'
+        doctor_last_name: 'Доктор'
+        clinic_full_name: 'Клиника'
+        commentable: 'Доктор(Клиника)'
       doctor:
         first_name: "Имя"
         last_name: "Фамилия"
