--- a/config/locales/ru.simple_form.yml
+++ b/config/locales/ru.simple_form.yml
@@ -112,8 +112,8 @@ ru:
         body: 'Текст'
     hints:
       advise:
-        idoctor: 'хочу рекомендовать себя и получить возможность редактрировать информацию'
-        iclinic: 'хочу рекомендовать клинику и получить возможность редактрировать информацию'
+        idoctor: 'хочу рекомендовать себя и получить возможность редактировать свою информацию'
+        iclinic: 'хочу рекомендовать клинику и получить возможность редактировать свою информацию'
       category:
         pediatric: ''
     placeholders:
