добавлены комментарии и рейтинг в завке и при создании доктора и клиники из админки

--- a/config/locales/activerecord.yml
+++ b/config/locales/activerecord.yml
@@ -96,6 +96,9 @@ ru:
         phone_number: "Телефон"
         description: "Описание"
         pediatric: "Детский"
+        comment: 'Отзыв'
+        rating: 'Рейтинг'
+        processed: 'Проверена'
       address:
         phone_number: "Телефон"
         mobile_phone_number: "Телефон моб."
