--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -22,7 +22,7 @@ ru:
       unlock_instructions:
         subject: "Инструкции по разблокировке учётной записи"
     omniauth_callbacks:
-      failure: "Вы не можете войти в систему с учётной записью из %{kind}б так как \"%{reason}\"."
+      failure: "Вы не можете войти в систему с учётной записью из %{kind}, так как \"%{reason}\"."
       success: "Вход в систему выполнен с учётной записью из %{kind}."
     passwords:
       format: "Hеверный формат - должен содержать минимум 5 символов, включая одну строчную букву, заглавную букву и цифру."
