--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,3 @@
-== README
-
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Adviser is an online service designed to help you quickly and easily find the right doctor for your specific needs.
+Whether you're searching for a specialist, a general practitioner, or a healthcare provider nearby,
+Adviser connects you with trusted medical professionals based on your preferences, location, and medical requirements.
